--- a/app/src/main/res/layout/activity_developer.xml
+++ b/app/src/main/res/layout/activity_developer.xml
@@ -10,7 +10,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:weightSum="4"
-    tools:context="com.ncslab.pyojihye.interpretprogram.Activity.LoginActivity">
+    tools:context="com.ncslab.pyojihye.interpret.Activity.LoginActivity">
 
     <RelativeLayout
         android:id="@+id/RelativeLayoutProgrammer"
