--- a/app/src/main/res/layout/activity_training.xml
+++ b/app/src/main/res/layout/activity_training.xml
@@ -12,7 +12,7 @@
         android:layout_weight="1"
         android:layout_margin="15dp">
 
-        <com.ncslab.pyojihye.interpretprogram.ECT.ModeTextView
+        <com.ncslab.pyojihye.interpret.ECT.ModeTextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/ModeTextViewTraining"
